--- a/bitteDeptos.html
+++ b/bitteDeptos.html
@@ -423,9 +423,7 @@
                                     </div>
                                 </div> -->
                             </div>
-                            <!-- <div class="btn-block text-center">
-                                <a href="portfolio-five-column-wide.html" class="btn-loadmore octf-btn">Read More</a>
-                            </div> -->
+                            <!-- git aa -->
                         </div>
                     </div>
                 </div>
