--- a/index.html
+++ b/index.html
@@ -1353,7 +1353,7 @@
                     <div class="widget-footer widget-contact">
                         <h6>Enlaces rápidos</h6>
                         <ul>
-                            <li><a href="#">SAcerca de Bitte</a></li>
+                            <li><a href="#">Acerca de Bitte</a></li>
                             <li><a href="#">Departamentos</a></li>
                             <li><a href="#">Contacto</a></li>
                         </ul>
