--- a/BitteEspacios.html
+++ b/BitteEspacios.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>Theratio</title>
+    <title>Bitte</title>
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
@@ -225,37 +225,37 @@
                 <div class="row">
                     <div class="col-lg-12 text-center theratio-align-center">
                         <div class="ot-heading is-dots">
-                            <span>[ our portfolio ]</span>
-                            <h2 class="main-heading">Some of Our Works<br>  and Case Studies for Clients</h2>
+                            <!-- <span>[ our portfolio ]</span> -->
+                            <h2 class="main-heading">Espacios <br>  pensados para ti y tu familia.</h2>
                         </div>
                         <div class="space-40"></div>
                         <div class="project-filter-wrapper">
                             <ul class="project_filters">
                                 <li><a href="#" data-filter="*" class="selected btn-details">All<span class="filter-count"></span></a></li>
-                                <li><a class="btn-details" href="#" data-filter=".category-14">Architecture<span class="filter-count"></span></a></li>         
-                                <li><a class="btn-details" href="#" data-filter=".category-15">Decor<span class="filter-count"></span></a></li>
-                                <li><a class="btn-details" href="#" data-filter=".category-20">Furniture<span class="filter-count"></span></a></li>
-                                <li><a class="btn-details" href="#" data-filter=".category-19">Interior<span class="filter-count"></span></a></li>
+                                <li><a class="btn-details" href="#" data-filter=".category-14">Aire Libre<span class="filter-count"></span></a></li>         
+                                <li><a class="btn-details" href="#" data-filter=".category-15">Gym<span class="filter-count"></span></a></li>
+                                <li><a class="btn-details" href="#" data-filter=".category-20">Alberca<span class="filter-count"></span></a></li>
+                                <li><a class="btn-details" href="#" data-filter=".category-19">Terraza<span class="filter-count"></span></a></li>
                             </ul>
                             <div class="projects-grid pf_4_cols style-2 p-info-s2 img-scale w-auto no-gaps mx-0">
                                 <div class="grid-sizer"></div>
                                 <div class="project-item category-19 thumb2x">
                                     <div class="projects-box">
                                         <div class="projects-thumbnail">
-                                            <a href="portfolio-standar.html">
+                                            <a href="#">
                                                 <img src="https://via.placeholder.com/1440x720.png" alt="">
                                             </a>
                                             <div class="overlay">
-                                                <h5>Stylish Family Appartment</h5>
+                                                <h5>Alberca</h5>
                                                 <i class="ot-flaticon-add"></i>
                                             </div>
                                         </div>
                                         <div class="portfolio-info">
                                             <div class="portfolio-info-inner">
-                                                <h5><a class="title-link" href="portfolio-standar.html">Stylish Family Appartment</a></h5>
-                                                <p class="portfolio-cates"><a href="#">Interior</a></p> 
+                                                <h5><a class="title-link" href="portfolio-standar.html">Alberca</a></h5>
+                                                <p class="portfolio-cates"><a href="#">Alberca</a></p> 
                                             </div>
-                                            <a class="overlay" href="portfolio-standar.html"></a>
+                                            <a class="overlay" href="#"></a>
                                         </div>
                                     </div>
                                 </div>
@@ -266,59 +266,58 @@
                                                 <img src="https://via.placeholder.com/720x720.png" alt="">
                                             </a>
                                             <div class="overlay">
-                                                <h5>Minimal Guests House</h5>
+                                                <h5>GYM</h5>
                                                 <i class="ot-flaticon-add"></i>
                                             </div>
                                         </div>
                                         <div class="portfolio-info">
                                             <div class="portfolio-info-inner">
-                                                <h5><a class="title-link" href="portfolio-detail-slider.html">Minimal Guests House</a></h5>
+                                                <h5><a class="title-link" href="#">GYM</a></h5>
                                                 <p class="portfolio-cates">
-                                                    <a href="#">Decor</a>
-                                                    <a href="#">Interior</a>
+                                                    <a href="#">Gym</a>
                                                 </p>
                                             </div>
-                                            <a class="overlay" href="portfolio-detail-slider.html"></a>
+                                            <a class="overlay" href="#"></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="project-item category-15 ">
                                     <div class="projects-box">
                                         <div class="projects-thumbnail">
-                                            <a href="portfolio-left.html">
+                                            <a href="#">
                                                 <img src="https://via.placeholder.com/720x720.png" alt="">
                                             </a>
                                             <div class="overlay">
-                                                <h5>Art Family Residence</h5>
+                                                <h5>Terraza</h5>
                                                 <i class="ot-flaticon-add"></i>
                                             </div>
                                         </div>
                                         <div class="portfolio-info">
                                             <div class="portfolio-info-inner">
-                                                <h5><a class="title-link" href="portfolio-left.html">Art Family Residence</a></h5>
-                                                <p class="portfolio-cates"><a href="#">Architecture</a></p> 
+                                                <h5><a class="title-link" href="#">Terraza</a></h5>
+                                                <p class="portfolio-cates"><a href="#">terraza</a></p> 
                                             </div>
-                                            <a class="overlay" href="portfolio-left.html"></a>
+                                            <a class="overlay" href="#"></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="project-item category-20 ">
                                     <div class="projects-box">
                                         <div class="projects-thumbnail">
-                                            <a href="portfolio-right.html">
+                                            <a href="#">
                                                 <img src="https://via.placeholder.com/720x720.png" alt="">
                                             </a>
                                             <div class="overlay">
-                                                <h5>Private House in Spain</h5>
+                                                <h5>Patio</h5>
                                                 <i class="ot-flaticon-add"></i>
                                             </div>
                                         </div>
                                         <div class="portfolio-info">
                                             <div class="portfolio-info-inner">
-                                                <h5><a class="title-link" href="portfolio-right.html">Private House in Spain</a></h5>
-                                                <p class="portfolio-cates"><a href="#">Furniture</a></p> 
+                                                <h5><a class="title-link" href="portfolio-right.html">Patio</a></h5>
+                                                <p class="portfolio-cates"><a href="#">Aire Libre</a></p> 
                                             </div>
-                                            <a class="overlay" href="portfolio-right.html"></a>
+                                            <a class="overlay" href="#"></a>
                                         </div>
                                     </div>
                                 </div>
@@ -329,43 +328,43 @@
                                                 <img src="https://via.placeholder.com/720x720.png" alt="">
                                             </a>
                                             <div class="overlay">
-                                                <h5>Modern Villa in Belgium</h5>
+                                                <h5>Algo</h5>
                                                 <i class="ot-flaticon-add"></i>
                                             </div>
                                         </div>
                                         <div class="portfolio-info">
                                             <div class="portfolio-info-inner">
-                                                <h5><a class="title-link" href="portfolio-small.html">Modern Villa in Belgium</a></h5>
-                                                <p class="portfolio-cates"><a href="#">Furniture</a></p> 
+                                                <h5><a class="title-link" href="#">Algo</a></h5>
+                                                <p class="portfolio-cates"><a href="#">Gym</a></p> 
                                             </div>
-                                            <a class="overlay" href="portfolio-small.html"></a>
+                                            <a class="overlay" href="#"></a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="project-item category-14 thumb2x">
                                     <div class="projects-box">
                                         <div class="projects-thumbnail">
-                                            <a href="portfolio-big.html">
+                                            <a href="#">
                                                 <img src="https://via.placeholder.com/1440x720.png" alt="">
                                             </a>
                                             <div class="overlay">
-                                                <h5>Minimalistic Style Appartment</h5>
+                                                <h5>Otro algo</h5>
                                                 <i class="ot-flaticon-add"></i>
                                             </div>
                                         </div>
                                         <div class="portfolio-info">
                                             <div class="portfolio-info-inner">
-                                                <h5><a class="title-link" href="portfolio-big.html">Minimalistic Style Appartment</a></h5>
+                                                <h5><a class="title-link" href="#">Otro algo</a></h5>
                                                 <p class="portfolio-cates"><a href="#">Furniture</a><a href="#">interior</a></p> 
                                             </div>
-                                            <a class="overlay" href="portfolio-big.html"></a>
+                                            <a class="overlay" href="#"></a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="btn-block text-center">
-                                <a href="portfolio-five-column-wide.html" class="btn-loadmore octf-btn">Read More</a>
-                            </div>
+                            <!-- <div class="btn-block text-center">
+                                <a href="#" class="btn-loadmore octf-btn">Ver mas</a>
+                            </div> -->
                         </div>
                     </div>
                 </div>
