--- a/bitteContacto.html
+++ b/bitteContacto.html
@@ -33,7 +33,7 @@
                                 <div class="octf-col logo-col no-padding">
                                     <div id="site-logo" class="site-logo">
                                         <a href="index.html">
-                                            <img src="images/logo.svg" alt="Theratio" class="">
+                                            <img src="images/logo.svg" alt="Bitte" class="">
                                         </a>
                                     </div>
                                 </div>
@@ -226,7 +226,7 @@
                 <div class="row">
                     <div class="col-lg-6 align-self-center mb-5 mb-lg-0">
                         <div class="contact-left">
-                            <h2>Escr'ibenos</h2>
+                            <h2>Escríibenos</h2>
                             <p class="font14">Los campos obligatorios están marcados *</p>
                             <form id="ajax-form" name="ajax-form" action="contact.php" method="post" class="wpcf7">
                                 <div class="main-form">
