changes in footer with direction, add 5 sliders in a home page

--- a/bitteContacto.html
+++ b/bitteContacto.html
@@ -183,7 +183,7 @@
                         <ul class="panel-cinfo">
                             <li class="panel-list-item">
                                 <span class="panel-list-icon"><i class="ot-flaticon-place"></i></span>
-                                <span class="panel-list-text"> 4567 Main St Buffalo, NY 98052  </span>
+                                <span class="panel-list-text"> Av. 20 de Noviembre 12621, Tijuana, B.C.  </span>
                             </li>
                             <li class="panel-list-item">
                                 <span class="panel-list-icon"><i class="ot-flaticon-mail"></i></span>
@@ -269,7 +269,7 @@
                                 <i class="ot-flaticon-place"></i>
                                 <div class="info-text">
                                     <h6>Dirección :</h6>
-                                    <p>4567 Main St Buffalo, NY 98052</p>
+                                    <p>Av. 20 de Noviembre 12621, Tijuana, B.C.</p>
                                 </div>
                             </div>
                             <div class="contact-info">
@@ -301,9 +301,11 @@
         </section>
         <div class="contact-map">
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2919.76036942209!2d-78.783478584609!3d42.96225400485114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d3730f8b6bf72b%3A0xacf8fa2c5a4103cd!2s4567%20Main%20St%2C%20Buffalo%2C%20NY%2014226%2C%20USA!5e0!3m2!1sen!2smx!4v1625872902084!5m2!1sen!2smx" height="522" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d86077.66255184308!2d-122.40402224079803!3d47.60810999586645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54906ab3f905c4b1%3A0x96bf575ff75ab1aa!2s411%20University%20St%2C%20Seattle%2C%20WA%2098101%2C%20Hoa%20K%E1%BB%B3!5e0!3m2!1svi!2s!4v1584084043716!5m2!1svi!2s" height="522" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe> -->
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3364.5542106003313!2d-116.99255868482469!3d32.51134208105303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d948066356fee7%3A0x4578d3b8a0250793!2sAv.%2020%20de%20Noviembre%2012621%2C%2020%20de%20Noviembre%2C%2022100%20Tijuana%2C%20B.C.!5e0!3m2!1sen!2smx!4v1628721153442!5m2!1sen!2smx" height="522" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 
+                <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2919.76036942209!2d-78.783478584609!3d42.96225400485114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d3730f8b6bf72b%3A0xacf8fa2c5a4103cd!2s4567%20Main%20St%2C%20Buffalo%2C%20NY%2014226%2C%20USA!5e0!3m2!1sen!2smx!4v1625872902084!5m2!1sen!2smx" height="522" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe> -->
+                <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d86077.66255184308!2d-122.40402224079803!3d47.60810999586645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54906ab3f905c4b1%3A0x96bf575ff75ab1aa!2s411%20University%20St%2C%20Seattle%2C%20WA%2098101%2C%20Hoa%20K%E1%BB%B3!5e0!3m2!1svi!2s!4v1584084043716!5m2!1svi!2s" height="522" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe> -->
+                <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3364.5542106003313!2d-116.99255868482469!3d32.51134208105303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d948066356fee7%3A0x4578d3b8a0250793!2sAv.%2020%20de%20Noviembre%2012621%2C%2020%20de%20Noviembre%2C%2022100%20Tijuana%2C%20B.C.!5e0!3m2!1sen!2smx!4v1628721153442!5m2!1sen!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> -->
             </div>
         </div>
 
@@ -330,7 +332,7 @@
                             <ul class="footer-list">
                                 <li class="footer-list-item">
                                     <span class="list-item-icon"><i class="ot-flaticon-place"></i></span>
-                                    <span class="list-item-text">4567 Main St Buffalo, NY 98052</span>
+                                    <span class="list-item-text">Av. 20 de Noviembre 12621, Tijuana, B.C.</span>
                                 </li>
                                 <li class="footer-list-item">
                                     <span class="list-item-icon"><i class="ot-flaticon-mail"></i></span>
