--- a/bitteDepa90mts.html
+++ b/bitteDepa90mts.html
@@ -183,7 +183,7 @@
                         <ul class="panel-cinfo">
                             <li class="panel-list-item">
                                 <span class="panel-list-icon"><i class="ot-flaticon-place"></i></span>
-                                <span class="panel-list-text"> 4567 Main St Buffalo, NY 98052  </span>
+                                <span class="panel-list-text"> Av. 20 de Noviembre 12621, Tijuana, B.C.  </span>
                             </li>
                             <li class="panel-list-item">
                                 <span class="panel-list-icon"><i class="ot-flaticon-mail"></i></span>
@@ -225,8 +225,8 @@
                     <div class="row">
                         <div class="space-70"></div>
                         <div class="col-lg-8 col-md-12">
-                            <p><span class="drop-cap"><span class="drop-cap-letter">C</span></span>onsidering the physical, mental, and emotional needs of people, interior designers use human-centered approaches to address how we live today. Creating novel approaches to promoting health, safety, and welfare, contemporary interiors are increasingly inspired by biophilia as a holistic approach to promoting health, safety, and welfare, contemporary interiors are increasingly inspired by biophilia as a holistic approach to design. By definition, interior design encompasses diverse aspects of our environment. The discipline extends to building materials and finishes; casework, furniture.</p>
-                            <p class="mb-0"><strong>Biophilia is the idea that humans possess an innate tendency to seek connections with nature.</strong> The term translates to ‘the love of living things’ in ancient Greek (philia = the love of / inclination towards), and was used by German-born American psychoanalyst Erich Fromm in The Anatomy of Human Destructiveness (1973), which described biophilia as “the passionate love of life and of all that is alive.” The term was later used by American biologist Edward O. Wilson in his work Biophilia (1984), which proposed that the tendency of humans to focus on and to affiliate with nature and other life-forvms.</p>
+                            <p><span class="drop-cap"><span class="drop-cap-letter">P</span></span>ara llenar area de ventas. Texto de venta. Para llenar area de ventas. Texto de venta Para llenar area de ventas. Texto de venta Para llenar area de ventas. Texto de venta Para llenar area de ventas. Texto de venta  </p>
+                            <p class="mb-0"><strong>Para llenar area de ventas. Texto de venta </strong> Para llenar area de ventas. Texto de venta. Para llenar area de ventas. Texto de venta.  Para llenar area de ventas. Texto de venta  Para llenar area de ventas. Texto de venta  Para llenar area de ventas. Texto de venta  Para llenar area de ventas. Texto de venta  Para llenar area de ventas. Texto de venta  Para llenar area de ventas. Texto de venta  Para llenar area de ventas. Texto de venta  Para llenar area de ventas. Texto de venta .</p>
                         </div>
                         <!-- <div class="col-lg-4 col-md-12">
                             <div class="portfolio-detail-info">
@@ -464,7 +464,7 @@
                             <ul class="footer-list">
                                 <li class="footer-list-item">
                                     <span class="list-item-icon"><i class="ot-flaticon-place"></i></span>
-                                    <span class="list-item-text">4567 Main St Buffalo, NY 98052</span>
+                                    <span class="list-item-text">Av. 20 de Noviembre 12621, Tijuana, B.C.</span>
                                 </li>
                                 <li class="footer-list-item">
                                     <span class="list-item-icon"><i class="ot-flaticon-mail"></i></span>
