--- a/bitteDeptos.html
+++ b/bitteDeptos.html
@@ -183,7 +183,7 @@
                         <ul class="panel-cinfo">
                             <li class="panel-list-item">
                                 <span class="panel-list-icon"><i class="ot-flaticon-place"></i></span>
-                                <span class="panel-list-text"> 4567 Main St Buffalo, NY 98052  </span>
+                                <span class="panel-list-text"> Av. 20 de Noviembre 12621, Tijuana, B.C.  </span>
                             </li>
                             <li class="panel-list-item">
                                 <span class="panel-list-icon"><i class="ot-flaticon-mail"></i></span>
@@ -453,7 +453,7 @@
                             <ul class="footer-list">
                                 <li class="footer-list-item">
                                     <span class="list-item-icon"><i class="ot-flaticon-place"></i></span>
-                                    <span class="list-item-text">4567 Main St Buffalo, NY 98052</span>
+                                    <span class="list-item-text">Av. 20 de Noviembre 12621, Tijuana, B.C.</span>
                                 </li>
                                 <li class="footer-list-item">
                                     <span class="list-item-icon"><i class="ot-flaticon-mail"></i></span>
