--- a/Bitte_Ahome.html
+++ b/Bitte_Ahome.html
@@ -789,7 +789,7 @@
                         <div class="col-lg-12">
                             <div class="clients-slide owl-theme owl-carousel">
                                 <div class="img-item">
-                                    <figure><img src="https://via.placeholder.com/300x145.png" alt=""></figure>
+                                    <figure><img src="https://via.placeholder.com/300x145.png" alt=""q></figure>
                                 </div>
                                 <div class="img-item">
                                     <figure><img src="https://via.placeholder.com/300x145.png" alt=""></figure>
