ÂI changed the links of index

--- a/BitteEspacios.html
+++ b/BitteEspacios.html
@@ -32,7 +32,7 @@
                             <div class="octf-mainbar-row octf-row">
                                 <div class="octf-col logo-col no-padding">
                                     <div id="site-logo" class="site-logo">
-                                        <a href="index.html">
+                                        <a href="Bitte_Ahome.html">
                                             <img src="images/logo.svg" alt="Theratio" class="">
                                         </a>
                                     </div>
@@ -72,7 +72,7 @@
                         <div class="octf-col">
                             <div class="mlogo_wrapper clearfix">
                                 <div class="mobile_logo">
-                                    <a href="index.html">
+                                    <a href="Bitte_Ahome.html">
                                         <img src="images/logo.svg" alt="Theratio">
                                     </a>
                                 </div>
@@ -213,7 +213,7 @@
                     <div class="container">
                         <h1 class="page-title">Espacios</h1>
                         <ul id="breadcrumbs" class="breadcrumbs none-style">
-                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="Bitte_Ahome.html">Inicio</a></li>
                             <li class="active">Espacios</li>
                         </ul>    
                     </div>
