--- a/bitteDepa90mts.html
+++ b/bitteDepa90mts.html
@@ -32,7 +32,7 @@
                             <div class="octf-mainbar-row octf-row">
                                 <div class="octf-col logo-col no-padding">
                                     <div id="site-logo" class="site-logo">
-                                        <a href="index.html">
+                                        <a href="Bitte_Ahome.html">
                                             <img src="images/logo.svg" alt="Theratio" class="">
                                         </a>
                                     </div>
@@ -72,7 +72,7 @@
                         <div class="octf-col">
                             <div class="mlogo_wrapper clearfix">
                                 <div class="mobile_logo">
-                                    <a href="index.html">
+                                    <a href="Bitte_Ahome.html">
                                         <img src="images/logo.svg" alt="Theratio">
                                     </a>
                                 </div>
@@ -213,7 +213,7 @@
                     <div class="container">
                         <h1 class="page-title">Departamento 90 m<sup>2</sup></h1>
                         <ul id="breadcrumbs" class="breadcrumbs none-style">
-                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="Bitte_Ahome.html">Inicio</a></li>
                             <li><a href="./bitteDeptos.html">Departamentos</a></li>
                             <li class="active">90 m<sup>2</sup></li>
                         </ul>    
@@ -258,7 +258,7 @@
                                 <div id="gallery-2" class="gallery gallery-columns-2 s2">
                                     <figure class="gallery-item">
                                         <div class="gallery-icon portrait">
-                                            <a href="https://via.placeholder.com/1440x720.png">
+                                            <a href="./images/depto90/Bitte_90_g1b.jpg">
                                                 <img src="./images/depto90/Bitte_90_g1.jpg" alt="">
                                                 <span class="overlay"><i class="ot-flaticon-add"></i></span>
                                             </a>
@@ -266,7 +266,7 @@
                                     </figure>
                                     <figure class="gallery-item">
                                         <div class="gallery-icon portrait">
-                                            <a href="https://via.placeholder.com/1440x720.png">
+                                            <a href="./images/depto90/Bitte_90_g2b.jpg">
                                                 <img src="./images/depto90/Bitte_90_g2.jpg" alt="">
                                                 <span class="overlay"><i class="ot-flaticon-add"></i></span>
                                             </a>
@@ -274,7 +274,7 @@
                                     </figure>
                                     <figure class="gallery-item">
                                         <div class="gallery-icon portrait">
-                                            <a href="https://via.placeholder.com/1440x720.png">
+                                            <a href="./images/depto90/Bitte_90_g3b.jpg">
                                                 <img src="./images/depto90/Bitte_90_g3.jpg" alt="">
                                                 <span class="overlay"><i class="ot-flaticon-add"></i></span>
                                             </a>
@@ -282,7 +282,7 @@
                                     </figure>
                                     <figure class="gallery-item">
                                         <div class="gallery-icon portrait">
-                                            <a href="https://via.placeholder.com/1440x720.png">
+                                            <a href="./images/depto90/Bitte_90_g4b.jpg">
                                                 <img src="./images/depto90/Bitte_90_g4.jpg" alt="">
                                                 <span class="overlay"><i class="ot-flaticon-add"></i></span>
                                             </a>
