--- a/Bitte_Ahome.html
+++ b/Bitte_Ahome.html
@@ -43,7 +43,7 @@
                             <div class="octf-mainbar-row octf-row">
                                 <div class="octf-col logo-col no-padding">
                                     <div id="site-logo" class="site-logo">
-                                        <a href="index.html">
+                                        <a href="Bitte_Ahome.html">
                                             <img src="images/logo.svg" alt="Theratio" class="">
                                         </a>
                                     </div>
@@ -83,7 +83,7 @@
                         <div class="octf-col">
                             <div class="mlogo_wrapper clearfix">
                                 <div class="mobile_logo">
-                                    <a href="index.html">
+                                    <a href="Bitte_Ahome.html">
                                         <img src="images/logo.svg" alt="Theratio">
                                     </a>
                                 </div>
