--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center align-self-center">
                     <div class="cs-logo">
-                        <a href="index.html">
+                        <a href="Bitte_Ahome.html">
                             <img src="images/logo-csoon.svg" alt="">
                         </a>
                     </div>
